--- a/template/GeosismaSchedaAgibilita.html
+++ b/template/GeosismaSchedaAgibilita.html
@@ -583,60 +583,19 @@
 										<tbody>
 											<tr>
 												<td>
-												<p>
-													<i>Inquadramento:</i>
-												</p>
-												<div id="overview">
-													<div class="gsoverviewElement" style="">
-														<div id="overviewMap37" class="olMap" style="width: 400px; height: 256px; position: relative; overflow: hidden;">
-															<div id="OpenLayers_Map_61_OpenLayers_ViewPort" class="olMapViewport" style="position: relative; overflow: hidden; width: 100%; height: 100%;">
-																<div id="OpenLayers_Map_61_OpenLayers_Container" style="position: absolute; z-index: 749; left: 0px; top: 0px;">
-																	<div id="OpenLayers_Layer_WMS_4" dir="ltr" class="olLayerDiv olLayerGrid" style="position: absolute; width: 100%; height: 100%; z-index: 100;">
-																		<div id="OpenLayers_Layer_WMS_4_bb" class="olBackBuffer" style="position: absolute; z-index: 99;"></div>
-																	</div>
-																</div><div class="gsoverviewExtentRectangle" style="position: absolute; z-index: 1000;"></div>
-															</div>
-														</div>
+													<p>
+														<i>Inquadramento:</i>
+													</p>
+													<div id="overview">
+														<div class="gsoverviewElement" style=""></div>
 													</div>
 												</div></td>
 												<td>
-												<p>
-													<i>Navigazione:</i>
-												</p>
-												<div id="map" class="olMap">
-													<div id="OpenLayers_Map_10_OpenLayers_ViewPort" class="olMapViewport olControlDragPanActive olControlZoomBoxActive olControlPinchZoomActive olControlNavigationActive" style="position: relative; overflow: hidden; width: 100%; height: 100%;">
-														<div id="OpenLayers_Map_10_OpenLayers_Container" style="position: absolute; z-index: 749; left: 0px; top: 0px;">
-															<div id="OpenLayers_Layer_WMS_38" dir="ltr" class="olLayerDiv olLayerGrid" style="position: absolute; width: 100%; height: 100%; z-index: 100;"><img class="olTileImage" src="./GeosismaSchedaAgibilita_files/mapserv" style="visibility: inherit; opacity: 1; position: absolute; left: 52px; top: -67px; width: 256px; height: 256px;"><img class="olTileImage" src="./GeosismaSchedaAgibilita_files/mapserv(1)" style="visibility: inherit; opacity: 1; position: absolute; left: 52px; top: 189px; width: 256px; height: 256px;"><img class="olTileImage" src="./GeosismaSchedaAgibilita_files/mapserv(2)" style="visibility: inherit; opacity: 1; position: absolute; left: 308px; top: -67px; width: 256px; height: 256px;"><img class="olTileImage" src="./GeosismaSchedaAgibilita_files/mapserv(3)" style="visibility: inherit; opacity: 1; position: absolute; left: -204px; top: -67px; width: 256px; height: 256px;"><img class="olTileImage" src="./GeosismaSchedaAgibilita_files/mapserv(4)" style="visibility: inherit; opacity: 1; position: absolute; left: 308px; top: 189px; width: 256px; height: 256px;"><img class="olTileImage" src="./GeosismaSchedaAgibilita_files/mapserv(5)" style="visibility: inherit; opacity: 1; position: absolute; left: -204px; top: 189px; width: 256px; height: 256px;">
-															</div>
-														</div>
-														<div id="OpenLayers_Control_PanZoomBar_7" class="olControlPanZoomBar olControlNoSelect" unselectable="on" style="position: absolute; left: 4px; top: 4px; z-index: 1004;">
-															<div id="OpenLayers_Control_PanZoomBar_7_panup" class="olButton" style="position: absolute; left: 13px; top: 4px; width: 18px; height: 18px; cursor: pointer;"><img id="OpenLayers_Control_PanZoomBar_7_panup_innerImage" class="olAlphaImg" src="./GeosismaSchedaAgibilita_files/north-mini.png" style="position: relative; width: 18px; height: 18px;">
-															</div>
-															<div id="OpenLayers_Control_PanZoomBar_7_panleft" class="olButton" style="position: absolute; left: 4px; top: 22px; width: 18px; height: 18px; cursor: pointer;"><img id="OpenLayers_Control_PanZoomBar_7_panleft_innerImage" class="olAlphaImg" src="./GeosismaSchedaAgibilita_files/west-mini.png" style="position: relative; width: 18px; height: 18px;">
-															</div>
-															<div id="OpenLayers_Control_PanZoomBar_7_panright" class="olButton" style="position: absolute; left: 22px; top: 22px; width: 18px; height: 18px; cursor: pointer;"><img id="OpenLayers_Control_PanZoomBar_7_panright_innerImage" class="olAlphaImg" src="./GeosismaSchedaAgibilita_files/east-mini.png" style="position: relative; width: 18px; height: 18px;">
-															</div>
-															<div id="OpenLayers_Control_PanZoomBar_7_pandown" class="olButton" style="position: absolute; left: 13px; top: 40px; width: 18px; height: 18px; cursor: pointer;"><img id="OpenLayers_Control_PanZoomBar_7_pandown_innerImage" class="olAlphaImg" src="./GeosismaSchedaAgibilita_files/south-mini.png" style="position: relative; width: 18px; height: 18px;">
-															</div>
-															<div id="OpenLayers_Control_PanZoomBar_7_zoomin" class="olButton" style="position: absolute; left: 13px; top: 63px; width: 18px; height: 18px; cursor: pointer;"><img id="OpenLayers_Control_PanZoomBar_7_zoomin_innerImage" class="olAlphaImg" src="./GeosismaSchedaAgibilita_files/zoom-plus-mini.png" style="position: relative; width: 18px; height: 18px;">
-															</div><div id="OpenLayers_Control_PanZoomBar_ZoombarOpenLayers_Map_10" class="olButton" style="background-image: url(http://geosisma-demo.faunalia.it/static/3b91ad008f9d89936b673b1bf35be2399cdbe683/javascript/img/zoombar.png); left: 13px; top: 81px; width: 18px; height: 132px; position: absolute; cursor: pointer;"></div>
-															<div id="OpenLayers_Control_PanZoomBar_7_OpenLayers_Map_10" style="position: absolute; left: 12px; top: 136px; width: 20px; height: 9px; cursor: move;"><img id="OpenLayers_Control_PanZoomBar_7_OpenLayers_Map_10_innerImage" class="olAlphaImg" src="./GeosismaSchedaAgibilita_files/slider.png" style="position: relative; width: 20px; height: 9px;">
-															</div>
-															<div id="OpenLayers_Control_PanZoomBar_7_zoomout" class="olButton" style="position: absolute; left: 13px; top: 213px; width: 18px; height: 18px; cursor: pointer;"><img id="OpenLayers_Control_PanZoomBar_7_zoomout_innerImage" class="olAlphaImg" src="./GeosismaSchedaAgibilita_files/zoom-minus-mini.png" style="position: relative; width: 18px; height: 18px;">
-															</div>
-														</div>
-														<div id="OpenLayers_Control_Scale_8" class="olControlScale olControlNoSelect" unselectable="on" style="position: absolute; z-index: 1004;">
-															<div>
-																Scale = 1 : 5000
-															</div>
-														</div>
-														<div id="OpenLayers_Control_ScaleLine_9" class="olControlScaleLine olControlNoSelect" unselectable="on" style="position: absolute; z-index: 1004;">
-															<div class="olControlScaleLineTop" style="visibility: visible; width: 57px;">
-																100 m
-															</div><div class="olControlScaleLineBottom" style="visibility: hidden;"></div>
-														</div>
-													</div>
-												</div></td>
+													<p>
+														<i>Navigazione:</i>
+													</p>
+													<div id="map" class="olMap"></div>
+												</td>
 												<td valign="top">
 												<button class="btn" id="select_from_map" type="button">
 													Seleziona dalla mappa
