fixed datepicker issues

--- a/template/GeosismaSchedaAgibilita.html
+++ b/template/GeosismaSchedaAgibilita.html
@@ -235,7 +235,7 @@
 							<input type="hidden" name="csrfmiddlewaretoken" value="LHmOePD1iz3tUAQI3EHmgaTt8DSo0iJn">
 						</div>
 						<div style="display: none;">
-							<input type="text" name="created" value="19/09/2013" id="id_created" class="hasDatepicker">
+							<input type="text" name="created" value="19/09/2013" id="id_created">
 							<input type="hidden" name="initial-created" value="2013-09-19" id="initial-id_created">
 							<select name="team" id="id_team">
 								<option value="">---------</option>
@@ -275,7 +275,7 @@
 											<input type="text" id="number" class="NullableFloatField" size="3" name="number" value="">
 											<!--input type="button" value="update" id="s1number_update" /-->
 											Data
-											<input type="text" id="sdate" class="DateField hasDatepicker" size="10" name="sdate" value="">
+											<input type="text" id="sdate" class="DateField" size="10" name="sdate" value="">
 										</p>
 									</div>
 									<div id="s1ided">
@@ -2293,41 +2293,5 @@ H3: Muratura con altri o non identificati rinforzi
 					</div>
 
 					<!-- FOOTER END -->
-
-				</div>
-			</div>
-		</div><ul class="ui-autocomplete ui-menu ui-widget ui-widget-content ui-corner-all" role="listbox" aria-activedescendant="ui-active-menuitem" style="z-index: 1; top: 0px; left: 0px; display: none;"></ul><ul class="ui-autocomplete ui-menu ui-widget ui-widget-content ui-corner-all" role="listbox" aria-activedescendant="ui-active-menuitem" style="z-index: 1; top: 0px; left: 0px; display: none;"></ul><ul class="ui-autocomplete ui-menu ui-widget ui-widget-content ui-corner-all" role="listbox" aria-activedescendant="ui-active-menuitem" style="z-index: 1; top: 0px; left: 0px; display: none;"></ul><ul class="ui-autocomplete ui-menu ui-widget ui-widget-content ui-corner-all" role="listbox" aria-activedescendant="ui-active-menuitem" style="z-index: 1; top: 0px; left: 0px; display: none;"></ul>
-		<div id="ui-datepicker-div" class="ui-datepicker ui-widget ui-widget-content ui-helper-clearfix ui-corner-all" style="position: absolute; top: 619.5px; left: 1376.5px; z-index: 1; display: none;">
-			<div class="ui-datepicker-header ui-widget-header ui-helper-clearfix ui-corner-all">
-				<a class="ui-datepicker-prev ui-corner-all" onclick="DP_jQuery_1379610966549.datepicker._adjustDate(&#39;#sdate&#39;, -1, &#39;M&#39;);" title="Prev"><span class="ui-icon ui-icon-circle-triangle-w">Prev</span></a><a class="ui-datepicker-next ui-corner-all" onclick="DP_jQuery_1379610966549.datepicker._adjustDate(&#39;#sdate&#39;, +1, &#39;M&#39;);" title="Next"><span class="ui-icon ui-icon-circle-triangle-e">Next</span></a>
-				<div class="ui-datepicker-title">
-					<span class="ui-datepicker-month">September</span>&nbsp;<span class="ui-datepicker-year">2013</span>
-				</div>
-			</div>
-			<table class="ui-datepicker-calendar">
-				<thead>
-					<tr>
-						<th class="ui-datepicker-week-end"><span title="Sunday">Su</span></th><th><span title="Monday">Mo</span></th><th><span title="Tuesday">Tu</span></th><th><span title="Wednesday">We</span></th><th><span title="Thursday">Th</span></th><th><span title="Friday">Fr</span></th><th class="ui-datepicker-week-end"><span title="Saturday">Sa</span></th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr>
-						<td class=" ui-datepicker-week-end " onclick="DP_jQuery_1379610966549.datepicker._selectDay(&#39;#sdate&#39;,8,2013, this);return false;"><a class="ui-state-default" href="./GeosismaSchedaAgibilita/#">1</a></td><td class=" " onclick="DP_jQuery_1379610966549.datepicker._selectDay(&#39;#sdate&#39;,8,2013, this);return false;"><a class="ui-state-default" href="./GeosismaSchedaAgibilita/#">2</a></td><td class=" " onclick="DP_jQuery_1379610966549.datepicker._selectDay(&#39;#sdate&#39;,8,2013, this);return false;"><a class="ui-state-default" href="./GeosismaSchedaAgibilita/#">3</a></td><td class=" " onclick="DP_jQuery_1379610966549.datepicker._selectDay(&#39;#sdate&#39;,8,2013, this);return false;"><a class="ui-state-default" href="./GeosismaSchedaAgibilita/#">4</a></td><td class=" " onclick="DP_jQuery_1379610966549.datepicker._selectDay(&#39;#sdate&#39;,8,2013, this);return false;"><a class="ui-state-default" href="./GeosismaSchedaAgibilita/#">5</a></td><td class=" " onclick="DP_jQuery_1379610966549.datepicker._selectDay(&#39;#sdate&#39;,8,2013, this);return false;"><a class="ui-state-default" href="./GeosismaSchedaAgibilita/#">6</a></td><td class=" ui-datepicker-week-end " onclick="DP_jQuery_1379610966549.datepicker._selectDay(&#39;#sdate&#39;,8,2013, this);return false;"><a class="ui-state-default" href="./GeosismaSchedaAgibilita/#">7</a></td>
-					</tr>
-					<tr>
-						<td class=" ui-datepicker-week-end " onclick="DP_jQuery_1379610966549.datepicker._selectDay(&#39;#sdate&#39;,8,2013, this);return false;"><a class="ui-state-default" href="./GeosismaSchedaAgibilita/#">8</a></td><td class=" " onclick="DP_jQuery_1379610966549.datepicker._selectDay(&#39;#sdate&#39;,8,2013, this);return false;"><a class="ui-state-default" href="./GeosismaSchedaAgibilita/#">9</a></td><td class=" " onclick="DP_jQuery_1379610966549.datepicker._selectDay(&#39;#sdate&#39;,8,2013, this);return false;"><a class="ui-state-default" href="./GeosismaSchedaAgibilita/#">10</a></td><td class=" " onclick="DP_jQuery_1379610966549.datepicker._selectDay(&#39;#sdate&#39;,8,2013, this);return false;"><a class="ui-state-default" href="./GeosismaSchedaAgibilita/#">11</a></td><td class=" " onclick="DP_jQuery_1379610966549.datepicker._selectDay(&#39;#sdate&#39;,8,2013, this);return false;"><a class="ui-state-default" href="./GeosismaSchedaAgibilita/#">12</a></td><td class=" " onclick="DP_jQuery_1379610966549.datepicker._selectDay(&#39;#sdate&#39;,8,2013, this);return false;"><a class="ui-state-default" href="./GeosismaSchedaAgibilita/#">13</a></td><td class=" ui-datepicker-week-end " onclick="DP_jQuery_1379610966549.datepicker._selectDay(&#39;#sdate&#39;,8,2013, this);return false;"><a class="ui-state-default" href="./GeosismaSchedaAgibilita/#">14</a></td>
-					</tr>
-					<tr>
-						<td class=" ui-datepicker-week-end " onclick="DP_jQuery_1379610966549.datepicker._selectDay(&#39;#sdate&#39;,8,2013, this);return false;"><a class="ui-state-default" href="./GeosismaSchedaAgibilita/#">15</a></td><td class=" " onclick="DP_jQuery_1379610966549.datepicker._selectDay(&#39;#sdate&#39;,8,2013, this);return false;"><a class="ui-state-default" href="./GeosismaSchedaAgibilita/#">16</a></td><td class=" " onclick="DP_jQuery_1379610966549.datepicker._selectDay(&#39;#sdate&#39;,8,2013, this);return false;"><a class="ui-state-default" href="./GeosismaSchedaAgibilita/#">17</a></td><td class=" " onclick="DP_jQuery_1379610966549.datepicker._selectDay(&#39;#sdate&#39;,8,2013, this);return false;"><a class="ui-state-default" href="./GeosismaSchedaAgibilita/#">18</a></td><td class=" ui-datepicker-days-cell-over  ui-datepicker-current-day ui-datepicker-today" onclick="DP_jQuery_1379610966549.datepicker._selectDay(&#39;#sdate&#39;,8,2013, this);return false;"><a class="ui-state-default ui-state-highlight ui-state-active" href="./GeosismaSchedaAgibilita/#">19</a></td><td class=" " onclick="DP_jQuery_1379610966549.datepicker._selectDay(&#39;#sdate&#39;,8,2013, this);return false;"><a class="ui-state-default" href="./GeosismaSchedaAgibilita/#">20</a></td><td class=" ui-datepicker-week-end " onclick="DP_jQuery_1379610966549.datepicker._selectDay(&#39;#sdate&#39;,8,2013, this);return false;"><a class="ui-state-default" href="./GeosismaSchedaAgibilita/#">21</a></td>
-					</tr>
-					<tr>
-						<td class=" ui-datepicker-week-end " onclick="DP_jQuery_1379610966549.datepicker._selectDay(&#39;#sdate&#39;,8,2013, this);return false;"><a class="ui-state-default" href="./GeosismaSchedaAgibilita/#">22</a></td><td class=" " onclick="DP_jQuery_1379610966549.datepicker._selectDay(&#39;#sdate&#39;,8,2013, this);return false;"><a class="ui-state-default" href="./GeosismaSchedaAgibilita/#">23</a></td><td class=" " onclick="DP_jQuery_1379610966549.datepicker._selectDay(&#39;#sdate&#39;,8,2013, this);return false;"><a class="ui-state-default" href="./GeosismaSchedaAgibilita/#">24</a></td><td class=" " onclick="DP_jQuery_1379610966549.datepicker._selectDay(&#39;#sdate&#39;,8,2013, this);return false;"><a class="ui-state-default" href="./GeosismaSchedaAgibilita/#">25</a></td><td class=" " onclick="DP_jQuery_1379610966549.datepicker._selectDay(&#39;#sdate&#39;,8,2013, this);return false;"><a class="ui-state-default" href="./GeosismaSchedaAgibilita/#">26</a></td><td class=" " onclick="DP_jQuery_1379610966549.datepicker._selectDay(&#39;#sdate&#39;,8,2013, this);return false;"><a class="ui-state-default" href="./GeosismaSchedaAgibilita/#">27</a></td><td class=" ui-datepicker-week-end " onclick="DP_jQuery_1379610966549.datepicker._selectDay(&#39;#sdate&#39;,8,2013, this);return false;"><a class="ui-state-default" href="./GeosismaSchedaAgibilita/#">28</a></td>
-					</tr>
-					<tr>
-						<td class=" ui-datepicker-week-end " onclick="DP_jQuery_1379610966549.datepicker._selectDay(&#39;#sdate&#39;,8,2013, this);return false;"><a class="ui-state-default" href="./GeosismaSchedaAgibilita/#">29</a></td><td class=" " onclick="DP_jQuery_1379610966549.datepicker._selectDay(&#39;#sdate&#39;,8,2013, this);return false;"><a class="ui-state-default" href="./GeosismaSchedaAgibilita/#">30</a></td><td class=" ui-datepicker-other-month ui-datepicker-unselectable ui-state-disabled">&nbsp;</td><td class=" ui-datepicker-other-month ui-datepicker-unselectable ui-state-disabled">&nbsp;</td><td class=" ui-datepicker-other-month ui-datepicker-unselectable ui-state-disabled">&nbsp;</td><td class=" ui-datepicker-other-month ui-datepicker-unselectable ui-state-disabled">&nbsp;</td><td class=" ui-datepicker-week-end ui-datepicker-other-month ui-datepicker-unselectable ui-state-disabled">&nbsp;</td>
-					</tr>
-				</tbody>
-			</table>
-		</div>
 	</body>
 </html>
