--- a/template/GeosismaSchedaAgibilita.html
+++ b/template/GeosismaSchedaAgibilita.html
@@ -6,7 +6,8 @@
 
 		<link href="./GeosismaSchedaAgibilita_files/bootstrap.css" rel="stylesheet">
 		<link href="./GeosismaSchedaAgibilita_files/bootstrap-responsive.css" rel="stylesheet">
-		<script type="text/javascript" src="./GeosismaSchedaAgibilita_files/jquery.js"></script><style type="text/css"></style>
+		<script type="text/javascript" src="./GeosismaSchedaAgibilita_files/jquery.js"></script>
+		<style type="text/css"></style>
 		<script type="text/javascript" src="./GeosismaSchedaAgibilita_files/bootstrap.min.js"></script>
 
 		<link href="./GeosismaSchedaAgibilita_files/mainstyle.css" rel="stylesheet">
