commeted all parts related to openlayer map inside safety

--- a/template/GeosismaSchedaAgibilita.html
+++ b/template/GeosismaSchedaAgibilita.html
@@ -463,7 +463,7 @@
 										</tbody>
 									</table>
 								</div>
-								<div id="s1map">
+								<!--div id="s1map">
 									<h3>Aggregato strutturale con identificazione dell'edificio</h3>
 
 									<script type="text/javascript">
@@ -612,7 +612,7 @@
 											</tr>
 										</tbody>
 									</table>
-								</div>
+								</div-->
 							</div>
 							<div id="s2" class="sezione">
 								<h2>Sezione 2 - Descrizione edificio</h2>
