added first support to manage upload of safeties

--- a/dlgSelectSafety.ui
+++ b/dlgSelectSafety.ui
@@ -63,7 +63,7 @@
       <enum>Qt::Horizontal</enum>
      </property>
      <property name="standardButtons">
-      <set>QDialogButtonBox::Close|QDialogButtonBox::Ok</set>
+      <set>QDialogButtonBox::Close|QDialogButtonBox::Ok|QDialogButtonBox::Save|QDialogButtonBox::SaveAll</set>
      </property>
     </widget>
    </item>
