removed "save and close" button

--- a/template/GeosismaSchedaAgibilita.html
+++ b/template/GeosismaSchedaAgibilita.html
@@ -2066,7 +2066,7 @@
 
 						<input type="hidden" name="initial-safety" value="{}" id="initial-id_safety">
 						<input type="submit" class="btn btn-warning" id="submit_safety_form_continue" name="submit_safety_form_continue" value="Salva scheda e continua">
-						<input type="submit" class="btn btn-primary" id="submit_safety_form_close" name="submit_safety_form_close" value="Salva scheda e chiudi">
+						<!--input type="submit" class="btn btn-primary" id="submit_safety_form_close" name="submit_safety_form_close" value="Salva scheda e chiudi"-->
 
 						<div class="clearingdiv">
 
@@ -2082,7 +2082,7 @@
 
 							<div id="submit_box">
 								<input type="submit" class="btn btn-warning" id="submit_safety_form_continue" name="submit_safety_form_continue" value="Salva scheda e continua">
-								<input type="submit" class="btn btn-primary" id="submit_safety_form_close" name="submit_safety_form_close" value="Salva scheda e chiudi">
+								<!--input type="submit" class="btn btn-primary" id="submit_safety_form_close" name="submit_safety_form_close" value="Salva scheda e chiudi"-->
 							</div>
 
 							<div class="clearingdiv">
