removed Attachment use... will be managed by plugin in pyqgis

--- a/template/GeosismaSchedaAgibilita.html
+++ b/template/GeosismaSchedaAgibilita.html
@@ -2070,7 +2070,7 @@
 
 						<div class="clearingdiv">
 
-							<table>
+							<!--table>
 								<tbody>
 									<tr>
 										<td><h3>Attachments</h3><ul>
@@ -2078,7 +2078,7 @@
 										</ul></td>
 									</tr>
 								</tbody>
-							</table>
+							</table-->
 
 							<div id="submit_box">
 								<input type="submit" class="btn btn-warning" id="submit_safety_form_continue" name="submit_safety_form_continue" value="Salva scheda e continua">
@@ -2087,9 +2087,9 @@
 
 							<div class="clearingdiv">
 
-								<div class="alert">
+								<!--div class="alert">
 									Per poter allegare file è necessario prima salvare la scheda.
-								</div>
+								</div-->
 
 								<div class="helpcontainer" id="help0" style="display: none;">
 									<h3>NOTE ESPLICATIVE SULLA COMPILAZIONE DELLA SCHEDA AeDES 05/2000</h3>
